Modified the dataset_import notebook

--- a/notebooks/dataset_import.ipynb
+++ b/notebooks/dataset_import.ipynb
@@ -44,7 +44,7 @@
     "- `merged_categories.csv`: mapping of merged categories to original IDs\n",
     "- `amazon_products_filtered.csv`: products filtered to valid categories\n",
     "\n",
-    "These files were generated in previous preprocessing steps.\n"
+    "These files were generated in previous preprocessing steps."
    ]
   },
   {
@@ -64,7 +64,7 @@
     "display(merged_df.head())\n",
     "\n",
     "print(\"Products:\")\n",
-    "display(products_df.head())\n"
+    "display(products_df.head())"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "## 2. Assigning New Category IDs\n",
     "\n",
     "Each merged category is assigned a new numeric ID.\n",
-    "These IDs will be used as classification labels.\n"
+    "These IDs will be used as classification labels."
    ]
   },
   {
@@ -95,7 +95,7 @@
     "    for cid in str(row[\"category_ids\"]).split(\",\"):\n",
     "        original_to_merged[int(cid.strip())] = merged_id\n",
     "\n",
-    "display(merged_df)\n"
+    "display(merged_df)"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "source": [
     "## 3. Migrating Products to New Categories\n",
     "\n",
-    "We replace the original Amazon `category_id` with the new merged category ID.\n"
+    "We replace the original Amazon `category_id` with the new merged category ID."
    ]
   },
   {
@@ -124,7 +124,7 @@
     "# Remove old category_id\n",
     "products_df = products_df.drop(columns=[\"category_id\"])\n",
     "\n",
-    "display(products_df.head())\n"
+    "display(products_df.head())"
    ]
   },
   {
@@ -136,7 +136,7 @@
     "\n",
     "We save:\n",
     "- `merged_categories_new.csv`\n",
-    "- `amazon_products_merged.csv`\n"
+    "- `amazon_products_merged.csv`"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "merged_df_out.to_csv(\"merged_categories_new.csv\", index=False)\n",
     "products_df.to_csv(\"amazon_products_merged.csv\", index=False)\n",
     "\n",
-    "print(\"Files saved successfully.\")\n"
+    "print(\"Files saved successfully.\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "## 5. Dataset Statistics\n",
     "\n",
     "We examine how many samples exist per merged category.\n",
-    "This is critical for class balance in deep learning.\n"
+    "This is critical for class balance in deep learning."
    ]
   },
   {
@@ -176,7 +176,7 @@
    "source": [
     "category_counts = products_df[\"merged_category_id\"].value_counts().sort_index()\n",
     "\n",
-    "category_counts\n"
+    "category_counts"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "686a458c",
    "metadata": {},
    "source": [
-    "## 6. Class Distribution Visualization\n"
+    "## 6. Class Distribution Visualization"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "plt.xlabel(\"Merged Category ID\")\n",
     "plt.ylabel(\"Number of Products\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "## 7. (Optional) Removing Underrepresented Categories\n",
     "\n",
     "Deep learning models perform poorly on classes with very few samples.\n",
-    "We optionally remove categories with fewer than N samples.\n"
+    "We optionally remove categories with fewer than N samples."
    ]
   },
   {
@@ -230,7 +230,7 @@
     "]\n",
     "\n",
     "print(\"Before:\", len(products_df))\n",
-    "print(\"After: \", len(filtered_df))\n"
+    "print(\"After: \", len(filtered_df))"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "id": "cba9e49b",
    "metadata": {},
    "source": [
-    "## 8. Final Dataset for Model Training\n"
+    "## 8. Final Dataset for Model Training"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "source": [
     "filtered_df.to_csv(\"amazon_products_final.csv\", index=False)\n",
     "\n",
-    "display(filtered_df.head())\n"
+    "display(filtered_df.head())"
    ]
   },
   {
@@ -272,7 +272,7 @@
     "Next steps:\n",
     "- Download images using `imgUrl`\n",
     "- Create PyTorch or TensorFlow dataloaders\n",
-    "- Train a baseline CNN (ResNet / EfficientNet)\n"
+    "- Train a baseline CNN (ResNet / EfficientNet)"
    ]
   }
  ],
