update augmentation notebook

--- a/notebooks/augmentation_steps.ipynb
+++ b/notebooks/augmentation_steps.ipynb
@@ -147,6 +147,26 @@
     "\n",
     "This strategy effectively \"breaks\" the perfect studio look of the dataset. By the time the model finishes training, it will have seen millions of variations in lighting, angle, and position, making it significantly more reliable for real-world application."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f0a25d",
+   "metadata": {},
+   "source": [
+    "## Strategy for Handling Class Imbalance: Quantile-Based Oversampling\n",
+    "\n",
+    "To ensure the model performs consistently across all categories, we address the **Class Imbalance** problem using a dynamic oversampling strategy. Instead of applying a uniform augmentation rate, we adjust the number of copies and augmentations based on the **Quantile (or Decile)** a category belongs to:\n",
+    "\n",
+    "1. **Identification:** We calculate the number of samples in each of the 50 merged categories.\n",
+    "2. **Distribution Analysis:** Categories are ranked and divided into **Quartiles or Deciles** based on their frequency.\n",
+    "3. **Dynamic Augmentation:** * **Minority Classes (Bottom Deciles):** Categories with very few samples will receive a higher multiplication factor (e.g., creating 5-10 augmented copies per image).\n",
+    "* **Mid-Range Classes:** Will receive a moderate augmentation factor.\n",
+    "* **Majority Classes (Top Deciles):** Will undergo standard augmentation without creating extra copies to avoid unnecessary memory overhead and prevent the model from overfitting on already abundant data.\n",
+    "\n",
+    "\n",
+    "\n",
+    "This approach balances the \"Loss Function\" during training, preventing the model from being biased toward high-frequency categories and improving the **Recall** for rare products."
+   ]
   }
  ],
  "metadata": {
