Image download automated in baseline model notebook

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -32,7 +32,11 @@
         "from PIL import Image\n",
         "import os\n",
         "from tqdm.notebook import tqdm\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import requests\n",
+        "import hashlib\n",
+        "import time\n",
+        "from io import BytesIO"
       ]
     },
     {
@@ -87,10 +91,71 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "def _url_to_filename(url):\n",
+        "    \"\"\"\n",
+        "    Create a deterministic filename from a URL using hashing.\n",
+        "    \"\"\"\n",
+        "    return hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
+        "\n",
+        "\n",
+        "def load_image_from_url(\n",
+        "    url,\n",
+        "    timeout=5,\n",
+        "    retries=3,\n",
+        "    backoff=1.0,\n",
+        "    cache_dir=IMAGE_DIR\n",
+        "):\n",
+        "    \"\"\"\n",
+        "    Fetch an image from a URL with caching and retries.\n",
+        "\n",
+        "    If the image was previously downloaded, it is loaded from disk\n",
+        "    instead of downloading again.\n",
+        "    \"\"\"\n",
+        "    if not url or not isinstance(url, str):\n",
+        "        return None\n",
+        "    \n",
+        "    filename = _url_to_filename(url)\n",
+        "    filepath = os.path.join(cache_dir, filename)\n",
+        "    os.makedirs(cache_dir, exist_ok=True)\n",
+        "\n",
+        "    # 1 -> Load from cache if exists\n",
+        "    if os.path.exists(filepath):\n",
+        "        try:\n",
+        "            return Image.open(filepath).convert(\"RGB\")\n",
+        "        except Exception:\n",
+        "            # Corrupted cache → remove and re-download\n",
+        "            os.remove(filepath)\n",
+        "\n",
+        "    # 2 -> Download with retries\n",
+        "    for attempt in range(1, retries + 1):\n",
+        "        try:\n",
+        "            response = requests.get(url, timeout=timeout)\n",
+        "            response.raise_for_status()\n",
+        "\n",
+        "            if \"image\" not in response.headers.get(\"Content-Type\", \"\"):\n",
+        "                raise ValueError(\"URL did not return an image\")\n",
+        "\n",
+        "            img = Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
+        "            img.save(filepath, format=\"JPEG\", quality=90)\n",
+        "            return img\n",
+        "\n",
+        "        except Exception:\n",
+        "            if attempt < retries:\n",
+        "                time.sleep(backoff)\n",
+        "            else:\n",
+        "                return None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "class ProductImageDataset(Dataset):\n",
         "    \"\"\"Custom dataset for loading product images from a CSV file or DataFrame.\"\"\"\n",
         "\n",
-        "    def __init__(self, image_dir, transform=None, csv_path=None, df=None):\n",
+        "    def __init__(self, transform=None, csv_path=None, df=None):\n",
         "        if df is not None:\n",
         "            self.df = df\n",
         "        elif csv_path is not None:\n",
@@ -98,7 +163,6 @@
         "        else:\n",
         "            raise ValueError(\"Either 'df' or 'csv_path' must be provided.\")\n",
         "        \n",
-        "        self.image_dir = image_dir\n",
         "        self.transform = transform\n",
         "        \n",
         "    def __len__(self):\n",
@@ -106,19 +170,19 @@
         "        \n",
         "    def __getitem__(self, idx):\n",
         "        row = self.df.iloc[idx]\n",
-        "        # Construct the image path from the image URL\n",
-        "        image_filename = os.path.basename(row['imgUrl'])\n",
-        "        image_path = os.path.join(self.image_dir, image_filename)\n",
         "        \n",
-        "        try:\n",
-        "            img = Image.open(image_path).convert('RGB')\n",
-        "        except FileNotFoundError:\n",
-        "            # Return a dummy red image if the file is not found\n",
+        "        # Load image using the robust caching function\n",
+        "        img = load_image_from_url(row['imgUrl'])\n",
+        "        \n",
+        "        # If image loading fails, return a dummy image\n",
+        "        if img is None:\n",
         "            img = Image.new('RGB', IMAGE_SIZE, color = 'red')\n",
         "            \n",
         "        label = int(row['merged_category_id'])\n",
+        "        \n",
         "        if self.transform:\n",
         "            img = self.transform(img)\n",
+        "            \n",
         "        return img, label"
       ]
     },
@@ -165,8 +229,8 @@
         "train_df, val_df = train_test_split(full_df, test_size=0.2, random_state=42, stratify=full_df['merged_category_id'])\n",
         "\n",
         "# Create separate datasets for training and validation with their respective transforms\n",
-        "train_dataset = ProductImageDataset(df=train_df, image_dir=IMAGE_DIR, transform=train_transform)\n",
-        "val_dataset = ProductImageDataset(df=val_df, image_dir=IMAGE_DIR, transform=val_transform)\n",
+        "train_dataset = ProductImageDataset(df=train_df, transform=train_transform)\n",
+        "val_dataset = ProductImageDataset(df=val_df, transform=val_transform)\n",
         "\n",
         "# Create DataLoaders\n",
         "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=0)\n",
