Corrected paths in baseline notebook

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -60,7 +60,7 @@
       "source": [
         "# --- Configuration ---\n",
         "# Dynamically determine the number of classes\n",
-        "mapping_df = pd.read_csv('data/processed/category_mapping.csv')\n",
+        "mapping_df = pd.read_csv('../data/processed/category_mapping.csv')\n",
         "NUM_CLASSES = mapping_df['merged_category_id'].nunique()\n",
         "\n",
         "IMAGE_SIZE = (224, 224)\n",
@@ -69,8 +69,8 @@
         "NUM_EPOCHS = 10\n",
         "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "# --- Paths ---\n",
-        "DATA_PATH = 'data/processed/products_cleaned.csv'\n",
-        "IMAGE_DIR = 'data/raw/images/' # Directory where images are stored\n",
+        "DATA_PATH = '../data/processed/products_cleaned.csv'\n",
+        "IMAGE_DIR = '../data/raw/images/' # Directory where images are stored\n",
         "\n",
         "print(f'Using device: {DEVICE}')\n",
         "print(f'Found {NUM_CLASSES} classes.')"
