Added pre-cache step

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -233,12 +233,38 @@
         "val_dataset = ProductImageDataset(df=val_df, transform=val_transform)\n",
         "\n",
         "# Create DataLoaders\n",
-        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=0)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=0)\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
         "\n",
         "print(f'Found {len(full_df)} total images.')\n",
         "print(f'Training set size: {len(train_dataset)}')\n",
         "print(f'Validation set size: {len(val_dataset)}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Step 3.5: Pre-cache all images to local disk\n",
+        "# This will download all images and save them in the IMAGE_DIR.\n",
+        "# Subsequent epochs will load images from disk, which is much faster.\n",
+        "print(\"Pre-caching images... This might take a while but only needs to be done once.\")\n",
+        "\n",
+        "# Create a temporary dataset instance without augmentations for faster caching\n",
+        "caching_transform = transforms.Compose([\n",
+        "    transforms.Resize(IMAGE_SIZE),\n",
+        "    transforms.ToTensor() # Add ToTensor() to convert PIL images to tensors\n",
+        "])\n",
+        "caching_dataset = ProductImageDataset(df=full_df, transform=caching_transform)\n",
+        "caching_loader = DataLoader(caching_dataset, batch_size=BATCH_SIZE * 2, shuffle=False, num_workers=2)\n",
+        "\n",
+        "# Iterate through the loader to trigger downloads\n",
+        "for _ in tqdm(caching_loader, desc=\"Caching Images\"):\n",
+        "    pass\n",
+        "\n",
+        "print(\"--- Image caching complete! ---\")"
       ]
     },
     {
