--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -31,12 +31,13 @@
         "import pandas as pd\n",
         "from PIL import Image\n",
         "import os\n",
-        "from tqdm.notebook import tqdm\n",
+        "from tqdm import tqdm\n",
         "import matplotlib.pyplot as plt\n",
         "import requests\n",
         "import hashlib\n",
         "import time\n",
-        "from io import BytesIO"
+        "from io import BytesIO\n",
+        "from concurrent.futures import ThreadPoolExecutor, as_completed"
       ]
     },
     {
@@ -247,24 +248,51 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Step 3.5: Pre-cache all images to local disk\n",
-        "# This will download all images and save them in the IMAGE_DIR.\n",
-        "# Subsequent epochs will load images from disk, which is much faster.\n",
-        "print(\"Pre-caching images... This might take a while but only needs to be done once.\")\n",
+        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+        "import tqdm as _tqdm\n",
         "\n",
-        "# Create a temporary dataset instance without augmentations for faster caching\n",
-        "caching_transform = transforms.Compose([\n",
-        "    transforms.Resize(IMAGE_SIZE),\n",
-        "    transforms.ToTensor() # Add ToTensor() to convert PIL images to tensors\n",
-        "])\n",
-        "caching_dataset = ProductImageDataset(df=full_df, transform=caching_transform)\n",
-        "caching_loader = DataLoader(caching_dataset, batch_size=BATCH_SIZE * 2, shuffle=False, num_workers=2)\n",
+        "tqdm = _tqdm.tqdm  # FORCE text-mode tqdm\n",
         "\n",
-        "# Iterate through the loader to trigger downloads\n",
-        "for _ in tqdm(caching_loader, desc=\"Caching Images\"):\n",
-        "    pass\n",
+        "def cache_image_only(url):\n",
+        "    return load_image_from_url(url) is not None\n",
         "\n",
-        "print(\"--- Image caching complete! ---\")"
+        "\n",
+        "MAX_WORKERS = 8\n",
+        "PREFETCH = 1000\n",
+        "\n",
+        "urls = full_df['imgUrl'].dropna().unique()\n",
+        "total = len(urls)\n",
+        "\n",
+        "print(f\"Found {total} unique image URLs to download.\")\n",
+        "print(f\"Using {MAX_WORKERS} workers, prefetch={PREFETCH}\")\n",
+        "\n",
+        "success = 0\n",
+        "\n",
+        "with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
+        "    futures = set()\n",
+        "\n",
+        "    pbar = tqdm(total=total, desc=\"Caching images\", unit=\"img\")\n",
+        "\n",
+        "    for url in urls:\n",
+        "        futures.add(executor.submit(cache_image_only, url))\n",
+        "\n",
+        "        if len(futures) >= PREFETCH:\n",
+        "            done = next(as_completed(futures))\n",
+        "            futures.remove(done)\n",
+        "\n",
+        "            if done.result():\n",
+        "                success += 1\n",
+        "            pbar.update(1)\n",
+        "\n",
+        "    # drain remaining\n",
+        "    for future in as_completed(futures):\n",
+        "        if future.result():\n",
+        "            success += 1\n",
+        "        pbar.update(1)\n",
+        "\n",
+        "    pbar.close()\n",
+        "\n",
+        "print(f\"--- Image caching complete! Downloaded {success} images. ---\")\n"
       ]
     },
     {
@@ -444,7 +472,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv (3.13.5)",
       "language": "python",
       "name": "python3"
     },
@@ -458,7 +486,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.13.5"
     }
   },
   "nbformat": 4,
