Added dataset filtering and selection for faster train

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -74,7 +74,49 @@
         "IMAGE_DIR = '../data/raw/images/' # Directory where images are stored\n",
         "\n",
         "print(f'Using device: {DEVICE}')\n",
-        "print(f'Found {NUM_CLASSES} classes.')"
+        "\n",
+        "full_df = pd.read_csv(DATA_PATH)\n",
+        "print(f\"Original dataset size: {len(full_df)} images\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dataset modification\n",
+        "in order to speed up the baseline model setup and train, we filter out some categories and select some of the products in each category."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 1. Identify categories with >= 25,000 samples\n",
+        "cat_counts = full_df['merged_category_id'].value_counts()\n",
+        "valid_cats = cat_counts[cat_counts >= 25000].index.tolist()\n",
+        "print(f\"Found {len(valid_cats)} categories with >= 25,000 images.\")\n",
+        "\n",
+        "# 2. Filter the dataframe to only these categories\n",
+        "full_df = full_df[full_df['merged_category_id'].isin(valid_cats)]\n",
+        "\n",
+        "# 3. Downsample each category to exactly 25,000\n",
+        "# group_keys=False keeps the original index structure\n",
+        "full_df = full_df.groupby('merged_category_id', group_keys=False).apply(lambda x: x.sample(25000, random_state=42))\n",
+        "\n",
+        "# 4. CRITICAL: Remap category IDs to contiguous 0...N-1 range\n",
+        "# If we keep categories [0, 5, 10], the model will crash if we set NUM_CLASSES=3.\n",
+        "# We must remap them to [0, 1, 2].\n",
+        "unique_cats = sorted(full_df['merged_category_id'].unique())\n",
+        "old_to_new_mapping = {old_id: new_id for new_id, old_id in enumerate(unique_cats)}\n",
+        "full_df['merged_category_id'] = full_df['merged_category_id'].map(old_to_new_mapping)\n",
+        "\n",
+        "# 5. Update global configuration\n",
+        "# We overwrite the NUM_CLASSES from Step 2 to match this new filtered dataset\n",
+        "NUM_CLASSES = len(unique_cats)\n",
+        "\n",
+        "print(f\"Filtered & Balanced Dataset: {len(full_df)} images ({NUM_CLASSES} classes x 25,000 images)\")"
       ]
     },
     {
@@ -156,13 +198,11 @@
         "class ProductImageDataset(Dataset):\n",
         "    \"\"\"Custom dataset for loading product images from a CSV file or DataFrame.\"\"\"\n",
         "\n",
-        "    def __init__(self, transform=None, csv_path=None, df=None):\n",
+        "    def __init__(self, transform=None, df=None):\n",
         "        if df is not None:\n",
         "            self.df = df\n",
-        "        elif csv_path is not None:\n",
-        "            self.df = pd.read_csv(csv_path)\n",
         "        else:\n",
-        "            raise ValueError(\"Either 'df' or 'csv_path' must be provided.\")\n",
+        "            raise ValueError(\"Either 'df' or 'dataframe' must be provided.\")\n",
         "        \n",
         "        self.transform = transform\n",
         "        \n",
@@ -222,9 +262,6 @@
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
         "])\n",
-        "\n",
-        "# Load the full dataframe\n",
-        "full_df = pd.read_csv(DATA_PATH)\n",
         "\n",
         "# Split the dataframe into training and validation sets, ensuring stratification\n",
         "train_df, val_df = train_test_split(full_df, test_size=0.2, random_state=42, stratify=full_df['merged_category_id'])\n",
