Added removing the failed urls before training

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -120,6 +120,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def _url_to_filename(url):\n",
+        "    \"\"\"\n",
+        "    Create a deterministic filename from a URL using hashing.\n",
+        "    \"\"\"\n",
+        "    return hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
+        "\n",
+        "os.makedirs(IMAGE_DIR, exist_ok=True)\n",
+        "\n",
+        "full_df['local_path'] = full_df['imgUrl'].fillna('').apply(\n",
+        "    lambda u: os.path.join(IMAGE_DIR, _url_to_filename(u)) if isinstance(u, str) and u else ''\n",
+        ")\n",
+        "\n",
+        "full_df.head()\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -134,13 +155,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def _url_to_filename(url):\n",
-        "    \"\"\"\n",
-        "    Create a deterministic filename from a URL using hashing.\n",
-        "    \"\"\"\n",
-        "    return hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
-        "\n",
-        "\n",
         "def load_image_from_url(\n",
         "    url,\n",
         "    timeout=5,\n",
@@ -169,6 +183,7 @@
         "            # Corrupted cache → remove and re-download\n",
         "            os.remove(filepath)\n",
         "\n",
+        "    # print(\"Not Cached, Downloading\", url)\n",
         "    # 2 -> Download with retries\n",
         "    for attempt in range(1, retries + 1):\n",
         "        try:\n",
@@ -186,7 +201,85 @@
         "            if attempt < retries:\n",
         "                time.sleep(backoff)\n",
         "            else:\n",
+        "                print(f\"Failed to download {url} after {retries} attempts.\")\n",
         "                return None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import hashlib\n",
+        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "# 1. Read the failed URLs from the text file\n",
+        "retry_urls_path = 'retry_urls.txt'\n",
+        "output_failed_path = 'failed_urls.txt'\n",
+        "\n",
+        "with open(retry_urls_path, 'r') as f:\n",
+        "    urls_to_retry = [line.strip() for line in f if line.strip()]\n",
+        "\n",
+        "print(f\"Attempting to re-download {len(urls_to_retry)} images using multithreading...\")\n",
+        "\n",
+        "def download_and_check(url):\n",
+        "    \"\"\"Worker function to download one image and check success\"\"\"\n",
+        "    try:\n",
+        "        # Try download (load_image_from_url uses requests.get internally)\n",
+        "        _ = load_image_from_url(url, cache_dir=IMAGE_DIR)\n",
+        "        \n",
+        "        # Verify the file exists on disk\n",
+        "        filename = hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
+        "        filepath = os.path.join(IMAGE_DIR, filename)\n",
+        "        \n",
+        "        if os.path.exists(filepath):\n",
+        "            return None # Success\n",
+        "        else:\n",
+        "            return url # Failed\n",
+        "    except Exception:\n",
+        "        return url # Failed\n",
+        "\n",
+        "still_failed = []\n",
+        "\n",
+        "# 2. Execute with ThreadPoolExecutor\n",
+        "# max_workers=16 is usually a safe sweet spot for image downloads\n",
+        "with ThreadPoolExecutor(max_workers=16) as executor:\n",
+        "    # Map the function to the list of URLs\n",
+        "    futures = {executor.submit(download_and_check, url): url for url in urls_to_retry}\n",
+        "    \n",
+        "    for future in tqdm(as_completed(futures), total=len(futures), desc=\"Multithreaded Retry\"):\n",
+        "        result = future.result()\n",
+        "        if result:\n",
+        "            still_failed.append(result)\n",
+        "\n",
+        "print(f\"\\nRetry finished. {len(urls_to_retry) - len(still_failed)} fixed. {len(still_failed)} permanently failed.\")\n",
+        "\n",
+        "with open(output_failed_path, 'w') as f:\n",
+        "    for url in still_failed:\n",
+        "        f.write(f\"{url}\\n\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Remove the failed URLs\n",
+        "retry_urls_path = 'failed_urls.txt'\n",
+        "with open(retry_urls_path, 'r') as f:\n",
+        "    failed_urls  = [line.strip() for line in f if line.strip()]\n",
+        "\n",
+        "initial_count = len(full_df)\n",
+        "full_df = full_df[~full_df['imgUrl'].isin(still_failed)]\n",
+        "final_count = len(full_df)\n",
+        "\n",
+        "print(f\"\\nDataFrame Cleaned:\")\n",
+        "print(f\"- Removed {initial_count - final_count} broken rows.\")\n",
+        "print(f\"- Total valid samples: {final_count}\")"
       ]
     },
     {
@@ -202,7 +295,7 @@
         "        if df is not None:\n",
         "            self.df = df\n",
         "        else:\n",
-        "            raise ValueError(\"Either 'df' or 'dataframe' must be provided.\")\n",
+        "            raise ValueError(\"'df' must be provided.\")\n",
         "        \n",
         "        self.transform = transform\n",
         "        \n",
@@ -211,9 +304,21 @@
         "        \n",
         "    def __getitem__(self, idx):\n",
         "        row = self.df.iloc[idx]\n",
+        "\n",
+        "        local_path = row['local_path']\n",
         "        \n",
-        "        # Load image using the robust caching function\n",
-        "        img = load_image_from_url(row['imgUrl'])\n",
+        "        img = None\n",
+        "        if local_path and os.path.exists(local_path):\n",
+        "            try:\n",
+        "                img = Image.open(local_path).convert(\"RGB\")\n",
+        "            except Exception:\n",
+        "                img = None\n",
+        "\n",
+        "        if img is None:\n",
+        "            print(f\"Image is not cached! {row['title']}\")\n",
+        "\n",
+        "            # Try again loading the image\n",
+        "            img = load_image_from_url(row['imgUrl'])\n",
         "        \n",
         "        # If image loading fails, return a dummy image\n",
         "        if img is None:\n",
@@ -271,12 +376,28 @@
         "val_dataset = ProductImageDataset(df=val_df, transform=val_transform)\n",
         "\n",
         "# Create DataLoaders\n",
-        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
+        "# num_workers = os.cpu_count()\n",
+        "num_workers = 0\n",
+        "print(\"Number of workers for DataLoader:\", num_workers)\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
+        "                          num_workers=num_workers, pin_memory=True)\n",
+        "                        #   persistent_workers=(num_workers>0))\n",
+        "\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False,\n",
+        "                        num_workers=num_workers, pin_memory=True)\n",
+        "                        # persistent_workers=(num_workers>0))\n",
         "\n",
         "print(f'Found {len(full_df)} total images.')\n",
         "print(f'Training set size: {len(train_dataset)}')\n",
         "print(f'Validation set size: {len(val_dataset)}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Pre-Caching Step"
       ]
     },
     {
@@ -285,51 +406,56 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-        "import tqdm as _tqdm\n",
+        "PRECACHE_STEP = True\n",
         "\n",
-        "tqdm = _tqdm.tqdm  # FORCE text-mode tqdm\n",
+        "if PRECACHE_STEP:\n",
+        "    from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+        "    import tqdm as _tqdm\n",
         "\n",
-        "def cache_image_only(url):\n",
-        "    return load_image_from_url(url) is not None\n",
+        "    tqdm = _tqdm.tqdm  # FORCE text-mode tqdm\n",
+        "\n",
+        "    def cache_image_only(url):\n",
+        "        return load_image_from_url(url) is not None\n",
         "\n",
         "\n",
-        "MAX_WORKERS = 8\n",
-        "PREFETCH = 1000\n",
+        "    MAX_WORKERS = 60\n",
+        "    PREFETCH = 4000\n",
         "\n",
-        "urls = full_df['imgUrl'].dropna().unique()\n",
-        "total = len(urls)\n",
+        "    urls = full_df['imgUrl'].dropna().unique()[::-1]\n",
+        "    total = len(urls)\n",
         "\n",
-        "print(f\"Found {total} unique image URLs to download.\")\n",
-        "print(f\"Using {MAX_WORKERS} workers, prefetch={PREFETCH}\")\n",
+        "    print(f\"Found {total} unique image URLs to download.\")\n",
+        "    print(f\"Using {MAX_WORKERS} workers, prefetch={PREFETCH}\")\n",
         "\n",
-        "success = 0\n",
+        "    success = 0\n",
         "\n",
-        "with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
-        "    futures = set()\n",
+        "    with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
+        "        futures = set()\n",
         "\n",
-        "    pbar = tqdm(total=total, desc=\"Caching images\", unit=\"img\")\n",
+        "        pbar = tqdm(total=total, desc=\"Caching images\", unit=\"img\")\n",
         "\n",
-        "    for url in urls:\n",
-        "        futures.add(executor.submit(cache_image_only, url))\n",
+        "        for url in urls:\n",
+        "            futures.add(executor.submit(cache_image_only, url))\n",
         "\n",
-        "        if len(futures) >= PREFETCH:\n",
-        "            done = next(as_completed(futures))\n",
-        "            futures.remove(done)\n",
+        "            if len(futures) >= PREFETCH:\n",
+        "                done = next(as_completed(futures))\n",
+        "                futures.remove(done)\n",
         "\n",
-        "            if done.result():\n",
+        "                if done.result():\n",
+        "                    success += 1\n",
+        "                pbar.update(1)\n",
+        "\n",
+        "        # drain remaining\n",
+        "        for future in as_completed(futures):\n",
+        "            if future.result():\n",
         "                success += 1\n",
         "            pbar.update(1)\n",
         "\n",
-        "    # drain remaining\n",
-        "    for future in as_completed(futures):\n",
-        "        if future.result():\n",
-        "            success += 1\n",
-        "        pbar.update(1)\n",
+        "        pbar.close()\n",
         "\n",
-        "    pbar.close()\n",
-        "\n",
-        "print(f\"--- Image caching complete! Downloaded {success} images. ---\")\n"
+        "    print(f\"--- Image caching complete! Downloaded {success} images. ---\")\n",
+        "else:\n",
+        "    print(\"Skipping precaching step.\")"
       ]
     },
     {
@@ -509,7 +635,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venv (3.13.5)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -523,7 +649,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.5"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
