Implemented retries for failed image urls

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -84,7 +84,7 @@
       "metadata": {},
       "source": [
         "### Dataset modification\n",
-        "in order to speed up the baseline model setup and train, we filter out some categories and select some of the products in each category."
+        "in order to speed up the baseline model setup and train, we filter out some categories and select some of the products in the remaining categories."
       ]
     },
     {
@@ -125,11 +125,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def _url_to_filename(url):\n",
-        "    \"\"\"\n",
-        "    Create a deterministic filename from a URL using hashing.\n",
-        "    \"\"\"\n",
-        "    return hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
+        "from dataset_utils import _url_to_filename\n",
         "\n",
         "os.makedirs(IMAGE_DIR, exist_ok=True)\n",
         "\n",
@@ -155,111 +151,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def load_image_from_url(\n",
-        "    url,\n",
-        "    timeout=5,\n",
-        "    retries=3,\n",
-        "    backoff=1.0,\n",
-        "    cache_dir=IMAGE_DIR\n",
-        "):\n",
-        "    \"\"\"\n",
-        "    Fetch an image from a URL with caching and retries.\n",
-        "\n",
-        "    If the image was previously downloaded, it is loaded from disk\n",
-        "    instead of downloading again.\n",
-        "    \"\"\"\n",
-        "    if not url or not isinstance(url, str):\n",
-        "        return None\n",
-        "    \n",
-        "    filename = _url_to_filename(url)\n",
-        "    filepath = os.path.join(cache_dir, filename)\n",
-        "    os.makedirs(cache_dir, exist_ok=True)\n",
-        "\n",
-        "    # 1 -> Load from cache if exists\n",
-        "    if os.path.exists(filepath):\n",
-        "        try:\n",
-        "            return Image.open(filepath).convert(\"RGB\")\n",
-        "        except Exception:\n",
-        "            # Corrupted cache → remove and re-download\n",
-        "            os.remove(filepath)\n",
-        "\n",
-        "    # print(\"Not Cached, Downloading\", url)\n",
-        "    # 2 -> Download with retries\n",
-        "    for attempt in range(1, retries + 1):\n",
-        "        try:\n",
-        "            response = requests.get(url, timeout=timeout)\n",
-        "            response.raise_for_status()\n",
-        "\n",
-        "            if \"image\" not in response.headers.get(\"Content-Type\", \"\"):\n",
-        "                raise ValueError(\"URL did not return an image\")\n",
-        "\n",
-        "            img = Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
-        "            img.save(filepath, format=\"JPEG\", quality=90)\n",
-        "            return img\n",
-        "\n",
-        "        except Exception:\n",
-        "            if attempt < retries:\n",
-        "                time.sleep(backoff)\n",
-        "            else:\n",
-        "                print(f\"Failed to download {url} after {retries} attempts.\")\n",
-        "                return None"
+        "from dataset_utils import load_image_from_url"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "import os\n",
-        "import hashlib\n",
-        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-        "from tqdm import tqdm\n",
-        "\n",
-        "# 1. Read the failed URLs from the text file\n",
-        "retry_urls_path = 'retry_urls.txt'\n",
-        "output_failed_path = 'failed_urls.txt'\n",
-        "\n",
-        "with open(retry_urls_path, 'r') as f:\n",
-        "    urls_to_retry = [line.strip() for line in f if line.strip()]\n",
-        "\n",
-        "print(f\"Attempting to re-download {len(urls_to_retry)} images using multithreading...\")\n",
-        "\n",
-        "def download_and_check(url):\n",
-        "    \"\"\"Worker function to download one image and check success\"\"\"\n",
-        "    try:\n",
-        "        # Try download (load_image_from_url uses requests.get internally)\n",
-        "        _ = load_image_from_url(url, cache_dir=IMAGE_DIR)\n",
-        "        \n",
-        "        # Verify the file exists on disk\n",
-        "        filename = hashlib.md5(url.encode(\"utf-8\")).hexdigest() + \".jpg\"\n",
-        "        filepath = os.path.join(IMAGE_DIR, filename)\n",
-        "        \n",
-        "        if os.path.exists(filepath):\n",
-        "            return None # Success\n",
-        "        else:\n",
-        "            return url # Failed\n",
-        "    except Exception:\n",
-        "        return url # Failed\n",
-        "\n",
-        "still_failed = []\n",
-        "\n",
-        "# 2. Execute with ThreadPoolExecutor\n",
-        "# max_workers=16 is usually a safe sweet spot for image downloads\n",
-        "with ThreadPoolExecutor(max_workers=16) as executor:\n",
-        "    # Map the function to the list of URLs\n",
-        "    futures = {executor.submit(download_and_check, url): url for url in urls_to_retry}\n",
-        "    \n",
-        "    for future in tqdm(as_completed(futures), total=len(futures), desc=\"Multithreaded Retry\"):\n",
-        "        result = future.result()\n",
-        "        if result:\n",
-        "            still_failed.append(result)\n",
-        "\n",
-        "print(f\"\\nRetry finished. {len(urls_to_retry) - len(still_failed)} fixed. {len(still_failed)} permanently failed.\")\n",
-        "\n",
-        "with open(output_failed_path, 'w') as f:\n",
-        "    for url in still_failed:\n",
-        "        f.write(f\"{url}\\n\")"
+        "### Removing failed Image URLs\n",
+        "There are some invalid URLs that we try to download them before the training. If still failed, we remove them from the dataset.\n",
+        "<br>We do this before the dataset is divided into train/validate sets."
       ]
     },
     {
@@ -269,17 +170,20 @@
       "outputs": [],
       "source": [
         "# Remove the failed URLs\n",
-        "retry_urls_path = 'failed_urls.txt'\n",
-        "with open(retry_urls_path, 'r') as f:\n",
-        "    failed_urls  = [line.strip() for line in f if line.strip()]\n",
+        "failed_urls_path = 'failed_urls.txt'\n",
+        "try:\n",
+        "    with open(failed_urls_path, 'r') as f:\n",
+        "        failed_urls  = [line.strip() for line in f if line.strip()]\n",
         "\n",
-        "initial_count = len(full_df)\n",
-        "full_df = full_df[~full_df['imgUrl'].isin(still_failed)]\n",
-        "final_count = len(full_df)\n",
+        "    initial_count = len(full_df)\n",
+        "    full_df = full_df[~full_df['imgUrl'].isin(failed_urls)]\n",
+        "    final_count = len(full_df)\n",
         "\n",
-        "print(f\"\\nDataFrame Cleaned:\")\n",
-        "print(f\"- Removed {initial_count - final_count} broken rows.\")\n",
-        "print(f\"- Total valid samples: {final_count}\")"
+        "    print(f\"\\nDataFrame Cleaned:\")\n",
+        "    print(f\"- Removed {initial_count - final_count} broken rows.\")\n",
+        "    print(f\"- Total valid samples: {final_count}\")\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"Failed URLs file {failed_urls_path} not found. No rows removed from dataset.\")"
       ]
     },
     {
@@ -418,8 +322,8 @@
         "        return load_image_from_url(url) is not None\n",
         "\n",
         "\n",
-        "    MAX_WORKERS = 60\n",
-        "    PREFETCH = 4000\n",
+        "    MAX_WORKERS = 50\n",
+        "    PREFETCH = 5000\n",
         "\n",
         "    urls = full_df['imgUrl'].dropna().unique()[::-1]\n",
         "    total = len(urls)\n",
