--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -192,48 +192,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class ProductImageDataset(Dataset):\n",
-        "    \"\"\"Custom dataset for loading product images from a CSV file or DataFrame.\"\"\"\n",
-        "\n",
-        "    def __init__(self, transform=None, df=None):\n",
-        "        if df is not None:\n",
-        "            self.df = df\n",
-        "        else:\n",
-        "            raise ValueError(\"'df' must be provided.\")\n",
-        "        \n",
-        "        self.transform = transform\n",
-        "        \n",
-        "    def __len__(self):\n",
-        "        return len(self.df)\n",
-        "        \n",
-        "    def __getitem__(self, idx):\n",
-        "        row = self.df.iloc[idx]\n",
-        "\n",
-        "        local_path = row['local_path']\n",
-        "        \n",
-        "        img = None\n",
-        "        if local_path and os.path.exists(local_path):\n",
-        "            try:\n",
-        "                img = Image.open(local_path).convert(\"RGB\")\n",
-        "            except Exception:\n",
-        "                img = None\n",
-        "\n",
-        "        if img is None:\n",
-        "            print(f\"Image is not cached! {row['title']}\")\n",
-        "\n",
-        "            # Try again loading the image\n",
-        "            img = load_image_from_url(row['imgUrl'])\n",
-        "        \n",
-        "        # If image loading fails, return a dummy image\n",
-        "        if img is None:\n",
-        "            img = Image.new('RGB', IMAGE_SIZE, color = 'red')\n",
-        "            \n",
-        "        label = int(row['merged_category_id'])\n",
-        "        \n",
-        "        if self.transform:\n",
-        "            img = self.transform(img)\n",
-        "            \n",
-        "        return img, label"
+        "from dataset_utils import ProductImageDataset"
       ]
     },
     {
@@ -280,17 +239,26 @@
         "val_dataset = ProductImageDataset(df=val_df, transform=val_transform)\n",
         "\n",
         "# Create DataLoaders\n",
-        "# num_workers = os.cpu_count()\n",
-        "num_workers = 0\n",
+        "num_workers = 4\n",
         "print(\"Number of workers for DataLoader:\", num_workers)\n",
         "\n",
-        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
-        "                          num_workers=num_workers, pin_memory=True)\n",
-        "                        #   persistent_workers=(num_workers>0))\n",
+        "train_loader = DataLoader(\n",
+        "    train_dataset, \n",
+        "    batch_size=BATCH_SIZE, \n",
+        "    shuffle=True,\n",
+        "    num_workers=num_workers, \n",
+        "    pin_memory=False,\n",
+        "    persistent_workers=True  # This keeps workers alive between epochs, saving time\n",
+        ")\n",
         "\n",
-        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False,\n",
-        "                        num_workers=num_workers, pin_memory=True)\n",
-        "                        # persistent_workers=(num_workers>0))\n",
+        "val_loader = DataLoader(\n",
+        "    val_dataset, \n",
+        "    batch_size=BATCH_SIZE, \n",
+        "    shuffle=False,\n",
+        "    num_workers=num_workers, \n",
+        "    pin_memory=False,\n",
+        "    persistent_workers=True\n",
+        ")\n",
         "\n",
         "print(f'Found {len(full_df)} total images.')\n",
         "print(f'Training set size: {len(train_dataset)}')\n",
@@ -310,7 +278,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "PRECACHE_STEP = True\n",
+        "PRECACHE_STEP = False\n",
         "\n",
         "if PRECACHE_STEP:\n",
         "    from concurrent.futures import ThreadPoolExecutor, as_completed\n",
