Fixed an issue with pandas again

--- a/notebooks/03_baseline_model.ipynb
+++ b/notebooks/03_baseline_model.ipynb
@@ -132,8 +132,9 @@
         "\n",
         "os.makedirs(IMAGE_DIR, exist_ok=True)\n",
         "\n",
-        "full_df['local_path'] = full_df['imgUrl'].fillna('').apply(\n",
-        "    lambda u: os.path.join(IMAGE_DIR, _url_to_filename(u)) if isinstance(u, str) and u else ''\n",
+        "full_df = full_df.groupby('merged_category_id', group_keys=False).sample(\n",
+        "    n=25000,\n",
+        "    random_state=42\n",
         ")\n",
         "\n",
         "full_df.head()\n"
